# pdf-slashannots

./: LICENSE  README.md  requirements.txt  setup.cfg
slashannots/: gui.py  main.py
