[metadata]
name = pdf-slashannots
version = 0.3.0
description = Extracting build-essential files from a LaTeX project and zip them.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    pdf
    annotations
    privacy
maintainer = Christian Burkert
maintainer_email = cs@cburkert.de
url = https://github.com/cburkert/pdf-slashannots
license = MIT
license_file = LICENSE
classifiers =
    Topic :: Software Development :: Version Control :: Git
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    PyPDF2>=2.12.1

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    pdf-slashannots = slashannots.main:main
    pdf-slashannots-gui = slashannots.gui:main
